fix(android): prevent plugin timeout on Magisk/RootAVD by adding process timeouts and safe cleanup
- Moved root and Frida detection checks to Cordova thread pool.
- Ensured processes are destroyed and streams closed in finally blocks.
- Fail-safe: assume compromised if detection errors or times out.
- Fixes issue where plugin call timed out on Magisk-enabled emulators (RootAVD)
-Added TimeOuts (500ms)
- Update plugin version to 2.0.1
Fixed #5